--- a/src/home.module.scss
+++ b/src/home.module.scss
@@ -5,6 +5,8 @@
 	padding: 0;
 
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	flex-wrap: wrap;
+
+	overflow: hidden;
 }
